--- a/Android UI/AndroidUI/app/src/main/AndroidManifest.xml
+++ b/Android UI/AndroidUI/app/src/main/AndroidManifest.xml
@@ -8,7 +8,15 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/Theme.AppCompat.NoActionBar">
+
+        <activity android:name=".TextComponents.Phone"></activity>
+        <activity android:name=".TextComponents.Email" />
+        <activity android:name=".TextComponents.Password_Numeric" />
+        <activity android:name=".TextComponents.Password" />
+        <activity android:name=".TextComponents.PlainText" />
+        <activity android:name=".TextComponents.Text" />
+        <activity android:name=".TextViewActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
