--- a/Android 401/MultiLiveData/app/build.gradle
+++ b/Android 401/MultiLiveData/app/build.gradle
@@ -31,4 +31,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.google.android.material:material:+'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+    implementation 'com.facebook.shimmer:shimmer:0.5.0'
+
+
 }
